new content add photo and js

--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
-    <main>
-      <!-- Student code goes here -->
-    </main>
 
-    <footer>
-      <p>I can code!</p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Married To The Coding</title>
+  <script>
+     function ans1(){
+        document.getElementById("demo1").innerHTML ="express myself with homepage";
+     }
+     function ans2(){
+        document.getElementById("demo2").innerHTML ="create something unique";
+     }
+
+  </script>
+</head>
+
+<body>
+  <header id="top">
+    <h1>Married To The Coding</h1>
+    <img src="./assets/kururu.png" alt="Kururu is coding." height = "368" weight = "512" />
+  <main>
+    <h2>Addicted To Coding!!! Addicted To Coding!!! Addicted To Coding!!! Addicted To Coding!!! </h2>
+    <h3>Reasons Of Being A Fan Of Coding</h3>
+     <ul>
+       <button onclick="ans1()">Try me to show the answer</button><p></p>
+       <li id="demo1"></li><p></p>
+       <button = onclick="ans2()">Try me to show the answer</button><p></p>
+       <li id="demo2"></li><p></p>
+       <button>Try me to show the answer</button><p></p>
+       <li id="demo3"></li>
+     </ul>
+  </main>
+
+  <footer>
+    <p>I can code 2022@Chung Sze Joans Tong</p>
+  </footer>
+</body>
+
 </html>
