add css file and javascripts

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Married To The Coding</title>
+  <link rel="stylesheet" href="./assets/style.css">
   <script>
      function ans1(){
-        document.getElementById("demo1").innerHTML ="express myself with homepage";
+        document.getElementById("demo1").innerHTML ="Dynamic way to express myself";
      }
      function ans2(){
-        document.getElementById("demo2").innerHTML ="create something unique";
+        document.getElementById("demo2").innerHTML ="Create something unique";
      }
 
   </script>
@@ -20,7 +21,7 @@
 <body>
   <header id="top">
     <h1>Married To The Coding</h1>
-    <img src="./assets/kururu.png" alt="Kururu is coding." height = "368" weight = "512" />
+    <img src="./assets/kururu.png" alt="Kururu is coding."/>
   <main>
     <h2>Addicted To Coding!!! Addicted To Coding!!! Addicted To Coding!!! Addicted To Coding!!! </h2>
     <h3>Reasons Of Being A Fan Of Coding</h3>
@@ -30,7 +31,7 @@
        <button = onclick="ans2()">Try me to show the answer</button><p></p>
        <li id="demo2"></li><p></p>
        <button>Try me to show the answer</button><p></p>
-       <li id="demo3"></li>
+       <li id="demo3"></li><p></p>
      </ul>
   </main>
 
