--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Married To The Coding</title>
+  <title>Prework Study Guide</title>
   <link rel="stylesheet" href="./assets/style.css">
   <script>
      function ans1(){
@@ -20,10 +20,28 @@
 
 <body>
   <header id="top">
-    <h1>Married To The Coding</h1>
+    <h1>Prework Study Guide</h1>
     <img src="./assets/kururu.png" alt="Kururu is coding."/>
+    <h2>HTML</h2>
+    <ul>
+      <li>The head element contains information about the webpage.</li>
+      <li>The body element represents the visible content shown to the user.</li>
+    </ul>
+    <h2>CSS</h2>
+    <ul>
+      <li>I change the text color of h1 tag to blue and font size to 50px</li>
+      <li>I change the text color of h2 tag to darkmagenta and font size to 40px</li>
+    </ul>
+    <h2>Git</h2>
+    <ul>
+      <li>git status: currently on add-css branch</li>
+      <li>git checkout -b branch-name : creates a new branch and switches to it</li>
+    </ul>
+    <h2>JavaScript</h2>
+    <ul>
+      <li>Enter your Js notes here.</li>
+    </ul>
   <main>
-    <h2>Addicted To Coding!!! Addicted To Coding!!! Addicted To Coding!!! Addicted To Coding!!! </h2>
     <h3>Reasons Of Being A Fan Of Coding</h3>
      <ul>
        <button onclick="ans1()">Try me to show the answer</button><p></p>
