--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prework Study Guide</title>
   <link rel="stylesheet" href="./assets/style.css">
-  <script>
-     function ans1(){
-        document.getElementById("demo1").innerHTML ="Dynamic way to express myself";
-     }
-     function ans2(){
-        document.getElementById("demo2").innerHTML ="Create something unique";
-     }
-
-  </script>
+  <script src="./assets/script.js"></script>
 </head>
 
 <body>
   <header id="top">
     <h1>Prework Study Guide</h1>
-    <img src="./assets/kururu.png" alt="Kururu is coding."/>
+    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie."/>
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
+ </header>
+
     
     <ul class="card">
       <h2>HTML</h2>
@@ -49,15 +44,7 @@
 
 
   <main>
-    <h3>Reasons Of Being A Fan Of Coding</h3>
-     <ul>
-       <button onclick="ans1()">Try me to show the answer</button><p></p>
-       <li id="demo1"></li><p></p>
-       <button = onclick="ans2()">Try me to show the answer</button><p></p>
-       <li id="demo2"></li><p></p>
-       <button>Try me to show the answer</button><p></p>
-       <li id="demo3"></li><p></p>
-     </ul>
+   
   </main>
 
   <footer>
