add code on js file and add content on html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     
     <ul class="card">
       <h2>JavaScript</h2>
-      <li>Enter your Js notes here.</li>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
     </ul>
 
 
