add content to Readme.md and change content of html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     
     <ul class="card">
       <h2>Git</h2>
-      <li>git status: currently on add-css branch</li>
-      <li>git checkout -b branch-name : creates a new branch and switches to it</li>
+      <li>git status: currently on feature/add-js</li>
+      <li>git checkout -b feature/add-js:add JavaScript code </li>
     </ul>
     
     <ul class="card">
