change git status

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     
     <ul class="card">
       <h2>Git</h2>
-      <li>git status: currently on feature/add-js</li>
-      <li>git checkout -b feature/add-js:add JavaScript code </li>
+      <li>git status: currently on main/li>
+      <li>git checkout main and merge the branch to main </li>
     </ul>
     
     <ul class="card">
