--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <ul class="card">
       <h2>Git</h2>
-      <li>git status: currently on main/li>
+      <li>git status: currently on main</li>
       <li>git checkout main and merge the branch to main </li>
     </ul>
     
